# projeto_seguranca

./: .env.exemple  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/config/: config.py  dataset.py  features.py  plots.py
app/dados/bruto/tjsp/: Mario_Andrade_da_Silva-2323_22_10_2025.json
app/dados/tratado/funcionarios_risco/: João_Pereira_Amaral_de_Souza-5673_30_08_2025.json  Maria_Carvalho_Pereira_de_Souza-4256_30_08_2025.json  Maria_Pereira_de_Souza-4256_01_09_2025.json  Mario_Andrade_da_Silva-2323_01_09_2025.json  todos_riscos.csv
app/extract/: pw_tjsp.py
app/ml/: predict.py
app/modeling/: train.py
app/pipeline/: __init__.py
app/pipeline/extract/: __init__.py  pw_tjsp.py
app/pipeline/load/: saver.py
app/pipeline/scripts/: rodar_scraping.py
app/scripts/: rodar_scraping.py
docs/: mkdocs.yml
docs/docs/: index.md
