[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "app"
version = "0.0.1"
description = "Projeto de est\u00e1gio focado na cria\u00e7\u00e3o de uma ferramenta de an\u00e1lise para identificar anomalias, dados suspeitos e potenciais riscos que possam impactar a integridade e a reputa\u00e7\u00e3o da empresa"
authors = [
  { name = "nyudji" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10.0"


[tool.ruff]
line-length = 99
src = ["app"]
include = ["pyproject.toml", "app/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

